--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-REACT_APP_TOKEN=kkmZ8qfpBFmXyu5NZO2pZKiQr7fn6eZbnPdYrkhjCNsRyCRQRsc
+REACT_APP_TOKEN=4IAB5EZRAOE4KGjrWTKuNAVnsU7XpmHJ9wd8Uv7qL6KavLXLj2I
 REACT_APP_LEAGUE_API=https://api.pandascore.co/leagues
+REACT_APP_TEAMS_API=https://api.pandascore.co/teams
