fix remove cors

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_TOKEN=4IAB5EZRAOE4KGjrWTKuNAVnsU7XpmHJ9wd8Uv7qL6KavLXLj2I
-REACT_APP_LEAGUE_API=https://api.pandascore.co/leagues
-REACT_APP_TEAMS_API=https://api.pandascore.co/teams
-REACT_APP_API=https://api.pandascore.co/
+REACT_APP_LEAGUE_API=https://a-sport-gayhqb286-ilias-coder.vercel.app/api/leagues
+REACT_APP_TEAMS_API=https://a-sport-gayhqb286-ilias-coder.vercel.app/api/teams
+REACT_APP_API=https://a-sport-gayhqb286-ilias-coder.vercel.app/api/
